--- a/project/playlists.ipynb
+++ b/project/playlists.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
        "Index(['user_id', 'artist', 'track', 'playlistname'], dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/90/czs0nv0d30x0yxcfw1f2b1m00000gn/T/ipykernel_3176/1543494801.py:5: SettingWithCopyWarning: \n",
+      "/var/folders/90/czs0nv0d30x0yxcfw1f2b1m00000gn/T/ipykernel_45344/3598854012.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,35 +249,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "del song_features\n",
-    "del playlists_dataset"
+    "del playlists_dataset\n",
+    "\n",
+    "playlist_dataset_refined.drop_duplicates(subset=[\"track_id\"], inplace=True)\n",
+    "dataset_playlist_traks.drop_duplicates(subset=[\"track_id\"], inplace=True)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_playlist_tracks = pd.merge(\n",
+    "    playlist_dataset_refined, dataset_playlist_traks, on=\"track_id\", how=\"left\"\n",
+    ")\n",
+    "\n",
+    "\n",
+    "dataset_playlist_tracks_columns = dataset_playlist_tracks.columns\n",
+    "feature_columns = [\n",
+    "    \"artist\",\n",
+    "    \"track\",\n",
+    "    \"playlistname\",\n",
+    "    \"isrc\",\n",
+    "    \"acousticness\",\n",
+    "    \"danceability\",\n",
+    "    \"energy\",\n",
+    "    \"instrumentalness\",\n",
+    "    \"key\",\n",
+    "    \"liveness\",\n",
+    "    \"loudness\",\n",
+    "    \"mode\",\n",
+    "    \"speechiness\",\n",
+    "    \"tempo\",\n",
+    "    \"valence\",\n",
+    "    \"title\",\n",
+    "    \"mix\",\n",
+    "    \"is_remixed\",\n",
+    "    \"release_date\",\n",
+    "    \"genre_id\",\n",
+    "    \"subgenre_id\",\n",
+    "    \"track_url\",\n",
+    "    \"bpm\",\n",
+    "    \"duration\",\n",
+    "    \"key_id\",\n",
+    "    \"release_id\",\n",
+    "    \"artist_name\",\n",
+    "]\n",
+    "\n",
+    "\n",
+    "final_dataset = dataset_playlist_tracks[feature_columns]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
+     "data": {
+      "text/plain": [
+       "Index(['artist', 'track', 'playlistname', 'isrc', 'acousticness',\n",
+       "       'danceability', 'energy', 'instrumentalness', 'key', 'liveness',\n",
+       "       'loudness', 'mode', 'speechiness', 'tempo', 'valence', 'title', 'mix',\n",
+       "       'is_remixed', 'release_date', 'genre_id', 'subgenre_id', 'track_url',\n",
+       "       'bpm', 'duration', 'key_id', 'release_id', 'artist_name'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataset_playlist_traks = pd.merge(\n",
-    "    playlist_dataset_refined, dataset_playlist_traks, on=\"track_id\", how=\"left\"\n",
-    ")"
+    "joblib.dump(final_dataset, \"playlist_dataset\")"
    ]
   }
  ],
